# observability-services

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  sqlx_migrate.Dockerfile
.sqlx/: query-6b4369990d77fa9e14dcc63e81339207e41aa777c0c15d63247a56f6df01896a.json  query-aae98e3b13b327cf091bc44e7893455306fd53b134c70df6edeb1612a5daa827.json  query-de4ccc76c988ddbff0fb42333500cdab6ca3b45a1af307aac99a5ed9699ec34d.json
config/: fluent-bit-parsers.conf  fluent-bit.conf
migrations/: 20240112004246_create_todo.sql
scripts/initdb/: init.sql
src/: main.rs
