[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tower-http = { version = "0.5", features = ["trace"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
